Attempt to connect to PSE using open-feign